--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -10,7 +10,7 @@
 .container {
     height: 100vh;
     background-color: black;
-
+    
 }
 
 .grid {
@@ -82,38 +82,38 @@
 }
 
 p {
-        -webkit-animation: color-change 1s infinite;
-        -moz-animation: color-change 1s infinite;
-        -o-animation: color-change 1s infinite;
-        -ms-animation: color-change 1s infinite;
-        animation: color-change 1s infinite;
+    -webkit-animation: color-change 1s infinite;
+    -moz-animation: color-change 1s infinite;
+    -o-animation: color-change 1s infinite;
+    -ms-animation: color-change 1s infinite;
+    animation: color-change 1s infinite;
 }
-    
-    @-webkit-keyframes color-change {
-        0% { color: black; }
-        50% { color:black; }
-        100% { color:lightskyblue; }
-    }
-    @-moz-keyframes color-change {
-        0% { color: black; }
-        50% { color: black; }
-        100% { color: lightskyblue; }
-    }
-    @-ms-keyframes color-change {
-        0% { color: black; }
-        50% { color: black; }
-        100% { color: lightskyblue; }
-    }
-    @-o-keyframes color-change {
-        0% { color: black; }
-        50% { color: black; }
-        100% { color: lightskyblue; }
-    }
-    @keyframes color-change {
-        0% { color: black; }
-        50% { color: black; }
-        100% { color: lightskyblue; }
-    }
+
+@-webkit-keyframes color-change {
+    0% { color: black; }
+    50% { color:black; }
+    100% { color:lightskyblue; }
+}
+@-moz-keyframes color-change {
+    0% { color: black; }
+    50% { color: black; }
+    100% { color: lightskyblue; }
+}
+@-ms-keyframes color-change {
+    0% { color: black; }
+    50% { color: black; }
+    100% { color: lightskyblue; }
+}
+@-o-keyframes color-change {
+    0% { color: black; }
+    50% { color: black; }
+    100% { color: lightskyblue; }
+}
+@keyframes color-change {
+    0% { color: black; }
+    50% { color: black; }
+    100% { color: lightskyblue; }
+}
 
 
 .top-right-text-box {
@@ -143,7 +143,29 @@ p {
     
 }
 
+.text-box h5 {
+    font-family: monospace; /* Web-safe typewriter-like font */
+    overflow: hidden; /* Ensures the content is not revealed until the animation */
+    border-right: .15em solid orange; /* The typwriter cursor */
+    white-space: nowrap; /* Keeps the content on a single line */
+    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+    letter-spacing: .15em; /* Adjust as needed */
+    animation: 
+    typing 3.5s steps(30, end),
+    blinking-cursor .5s step-end infinite;
+}
 
+/* The typing effect */
+@keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blinking-cursor {
+    from, to { border-color: transparent }
+    50% { border-color: orange; }
+}
 
 
 
