--- a/style/skills.css
+++ b/style/skills.css
@@ -1,3 +1,10 @@
+@import 'colours.css';
+@import 'icon.css';
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,300');
+
+
+
+
 * {
     margin: 0;
 }
@@ -5,97 +12,189 @@
 
 .container {
     height: 100vh;
-    background-color: blue;
-
+    background: url(./shade-2560x1440-blue-aqua-stock-hd-9701.jpg)
+    
 }
 
 .grid {
     height: 100vh;
     width: 100vw;
     display: grid;
-    background: pink;
+    /* background: pink; */
     grid-template-columns: 0.85fr 0.15fr;
-    grid-template-rows: 0.1fr 0.8fr 0.1fr;
+    grid-template-rows: 0.2fr 0.67fr 0.13fr;
 }
 
 
 .menu-box {
     grid-column: 2 / 3;
     grid-row: 1/ 2;
-    background: green;
+    /* background: green; */
     display: flex;
     justify-content: flex-end;
     align-items: flex-start;
     
+    
 }
 
 .menu-word {
+    -webkit-text-stroke: 2px;
+    font-family: roboto;
+    color: white;
     display: flex;
-    justify-content: flex-end;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: center;
     padding: 50px;
-    /* margin : 50px 50px;; */
-    font-size: 30px;
-    background: white;
-    border-radius: 50%;
+    margin : 20px 20px;;
+    font-size: 50px;
+    /* background: white; */
+    border-radius: 70%;
     padding: 16px 16px; 
-    font-size: 40px; 
-
-
+    filter: blur(1px);
+    
+    
+    
 }
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    margin: 0px 10px;
+    min-width: 20%;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); 
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.menu-word:hover {
+    color: lightblue;
+}
+
+
+.dropdown-content:hover {background-color: transparent;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbutton {background-color: lightblue;}
 
 
 
 .page-number-box {
     grid-column: 2 / 3;
     grid-row: 3 / 4;
-    background: green;
+    /* background: green; */
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
+    padding: 20px 10px;
     
 }
+
+.page-number-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 10px;
+}
+
 
 .blur-logo-box { 
     
     grid-column: 1 / 2;
     grid-row: 2 / 3;
-    background: green; 
+    /* background: green;  */
     display: grid;
     grid-template-columns: 0.4fr 0.2fr 0.4fr;
     
 }
 
-.text-left {
+.text-left-box {
     grid-column: 1 / 2;
-    
-    background: lightcoral; 
+    display: flex;
+    justify-content: flex-end;
+    /* background: lightcoral;  */
+}
+
+.text-left-content {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    font-size: 70px;
+    font-family: roboto;
+    padding: 20px;
+    flex-wrap: wrap;
+    letter-spacing: 2px;
 }
 
 .logo-logo {
     grid-column: 2 / 3;
     
-    background: red; 
+    /* background: red;  */
     display: flex;
     justify-content: center;
     align-items: center; 
-
-}
-
-.text-right {
-    grid-column: 3 / 4;
     
-    background: purple; 
 }
 
+.logo-word {
+    font-size: 180px;
+    filter: blur(3px);
+    margin: 0px 0px 0px 100px;
+    color: transparent;
+    -webkit-text-stroke: black 1px;
+    font-family: noto serif;
+}
+
+
+
+.text-right-box {
+    grid-column: 3 / 4; 
+    /* background: purple; */
+    
+}
+
+.text-right-content {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
+    font-size: 70px;
+    font-family: roboto;
+    padding: 20px;
+    flex-wrap: wrap;
+    letter-spacing: 2px;
+}
 
 
 .skillnav {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
-    background: blue; 
+    /* background: blue;  */
     display: flex;
     justify-content: center;
-    align-items: center; 
+    align-items: flex-start;
+    
+}
 
+.skillnav-box {
+    position: absolute;
+    width: 322px;
+    height: 83px;
+    /* margin: 0px 30px; */
+    background: rgba(16, 23, 42, 0.43);
+    font-size: 30px;
+    font-weight: 100;
+    font-family: Roboto;
+    color: #84E5FE;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 80px;
+    margin: 0px 0px 0px 80px;
+    letter-spacing: 6px;
 }
