--- a/style/skills.css
+++ b/style/skills.css
@@ -125,7 +125,7 @@
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    font-size: 70px;
+    font-size: 7vh;
     font-family: roboto;
     padding: 20px;
     flex-wrap: wrap;
@@ -163,7 +163,7 @@
     display: flex;
     justify-content: flex-end;
     align-items: flex-start;
-    font-size: 70px;
+    font-size: 7vh;
     font-family: roboto;
     padding: 20px;
     flex-wrap: wrap;
