--- a/style/icon.css
+++ b/style/icon.css
@@ -1,7 +1,7 @@
 @import 'colours.css';
 @import 'hover.css';
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,300');
-
+@import 'media-queries.css';
 
 .home-icon {
     height: 14vh;
