--- a/style/media-queries.css
+++ b/style/media-queries.css
@@ -1,18 +1,60 @@
-
-
-
-
-
-
-
-
-
+@import 'icon.css';
+@import 'colours.css';
+@import 'hover.css';
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,300');
 
 
 @media only screen 
 and (min-device-width : 768px) 
-and (max-device-width : 1024px) 
-and (orientation : landscape)
-and (-webkit-min-device-pixel-ratio: 1)  { 
+and (max-device-width : 1024px)
+and (-webkit-min-device-pixel-ratio: 1) 
+  {  
+
+.text-box{
+    font-size: 2vh;
+    margin: 1vh;
+    
+}
+
+.logo-text {
+    font-size: 20vh;
+    font-weight: 10vh;
+}
+    
+.bottom-right-icon-box {
+    margin: 2vh;
+
+}
+
+
+.fa-size {
+    font-size: 2vh;
+}
+
+
+}
+
+@media only screen 
+and (min-device-width : 375px) 
+and (max-device-width : 667px) { 
+    .text-box{
+        font-size: 2vh;
+        margin: 1vh;
+        
+    }
+    
+    .logo-text {
+        font-size: 20vh;
+        font-weight: 10vh;
+    }
+        
+    .bottom-right-icon-box {
+        margin: 2vh;
+    
+    }
+    
+    .fa-size {
+        font-size: 2vh;
+    }
     
 }
