--- a/style/contact.css
+++ b/style/contact.css
@@ -1,7 +1,7 @@
 @import 'colours.css';
 @import 'icon.css';
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,300');
-@import 'media-queries.css';
+
 
 * {
     margin: 0px;
@@ -36,7 +36,7 @@
 
 .menu-word {
     color: white;
-    padding: 10px;
+    padding: 1vh;
     font-size: 4.5vh;
     height: 30%;
     width:40%;
@@ -204,7 +204,7 @@ input[type=email] {
     left: 28.3vh;
     top: 8.2vh;
     background: white;
-    filter: blur(0.1px);
+    filter: blur(0.01vh);
     font-size: 2.5vh;
     border-radius: 1.6vh;
 }
@@ -217,7 +217,7 @@ input[type=blog] {
     top: 25.1vh;
     font-size: 2.5vh;
     background: white;
-    filter: blur(0.1px);
+    filter: blur(0.01vh);
     border-radius: 1.5vh;
     margin: 0.1vh -2.7vh;
 }
