--- a/style/icon.css
+++ b/style/icon.css
@@ -1,10 +1,9 @@
 @import 'colours.css';
 @import 'hover.css';
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,300');
-@import 'media-queries.css';
 
 .home-icon {
-    height: 14vh;
+    height: 9vw;
     width: 9vw;
     border-radius: 50%;
     background: black;
@@ -15,7 +14,7 @@
 }
 
 .bio-icon {
-    height: 14vh;
+    height: 9vw;
     width: 9vw;
     border-radius: 50%;
     background: black;
@@ -26,7 +25,7 @@
 }
 
 .skills-icon {
-    height: 14vh;
+    height: 9vw;
     width: 9vw;
     border-radius: 50%;
     background: black;
@@ -38,7 +37,7 @@
 
 
 .contact-icon {
-    height: 14vh;
+    height: 9vw;
     width: 9vw;
     border-radius: 50%;
     background: black;
@@ -49,7 +48,7 @@
 }
 
 .bottom-icon {
-    height: 8vh;
+    height: 5vw;
     width: 5vw;
     border-radius: 50%;
     background: black;
