--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -1,10 +1,10 @@
 @import 'icon.css';
 @import 'colours.css';
 @import 'hover.css';
-@import 'media-queries.css';
+
 
 * {
-    margin: 0;
+    margin: 0px;
 }
 
 
@@ -75,11 +75,11 @@
 }
 
 .logo-text {
-    font-size: 200px;
-    font-weight: 100px;
+    font-size: 20vh;
+    font-weight: 10vh;
     color: black;
     -webkit-text-stroke: 1px white;
-    filter: blur(0.1px);
+    filter: blur(0.01vh);
 }
 
 p {
@@ -127,8 +127,8 @@ p {
 }
 
 .text-box{
-    margin: 10px;
-    font-size: 20px;
+    margin: 1vh;
+    font-size: 2vh;
     color: white;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
@@ -136,7 +136,7 @@ p {
 .bottom-right-icon-box {
     grid-column: 5 / 6;
     grid-row: 5 / 6;
-    margin: 20px;
+    height: 100%;
     background: black;
     display: flex;
     justify-content: flex-end;
