--- a/style/skills.css
+++ b/style/skills.css
@@ -6,7 +6,7 @@
 
 
 * {
-    margin: 0;
+    margin: 0px;
 }
 
 
@@ -44,13 +44,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 50px;
-    margin : 20px 20px;;
-    font-size: 50px;
+    padding: 5vh;
+    margin : 2vh 2vh;;
+    font-size: 5vh;
     /* background: white; */
     border-radius: 70%;
-    padding: 16px 16px; 
-    filter: blur(1px);
+    padding: 1.6vh 1.6vh; 
+    filter: blur(0.1vh);
     
     
     
@@ -59,7 +59,7 @@
 .dropdown-content {
     display: none;
     position: absolute;
-    margin: 0px 10px;
+    margin: 0vh 1vh;
     min-width: 20%;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); 
     z-index: 1;
@@ -67,7 +67,7 @@
 
 .dropdown-content a {
     color: black;
-    padding: 12px 16px;
+    padding: 1.2vh 1.6vh;
     text-decoration: none;
     display: block;
 }
@@ -92,7 +92,8 @@
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
-    padding: 20px 10px;
+    padding: 2vh 1vh;
+    margin-top: 5%;
     
 }
 
@@ -100,7 +101,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 10px 10px;
+    padding: 1vh 1vh;
 }
 
 
@@ -118,6 +119,7 @@
     grid-column: 1 / 2;
     display: flex;
     justify-content: flex-end;
+    height: 100%;
     /* background: lightcoral;  */
 }
 
@@ -127,9 +129,9 @@
     align-items: flex-start;
     font-size: 7vh;
     font-family: roboto;
-    padding: 20px;
+    padding: 2vh;
     flex-wrap: wrap;
-    letter-spacing: 2px;
+    letter-spacing: 0.2vh;
 }
 
 .logo-logo {
@@ -143,9 +145,9 @@
 }
 
 .logo-word {
-    font-size: 180px;
+    font-size: 18vh;
     filter: blur(3px);
-    margin: 0px 0px 0px 100px;
+    margin: 0vh 0vh 0vh 10vh;
     color: transparent;
     -webkit-text-stroke: black 1px;
     font-family: noto serif;
@@ -155,6 +157,9 @@
 
 .text-right-box {
     grid-column: 3 / 4; 
+    display: flex;
+    justify-content: flex-end;
+    height: 100%;
     /* background: purple; */
     
 }
@@ -165,9 +170,9 @@
     align-items: flex-start;
     font-size: 7vh;
     font-family: roboto;
-    padding: 20px;
+    padding: 2vh;
     flex-wrap: wrap;
-    letter-spacing: 2px;
+    letter-spacing: 0.2vh;
 }
 
 
@@ -183,18 +188,18 @@
 
 .skillnav-box {
     position: absolute;
-    width: 322px;
-    height: 83px;
+    width: 32.2vh;
+    height: 8.3vh;
     /* margin: 0px 30px; */
     background: rgba(16, 23, 42, 0.43);
-    font-size: 30px;
+    font-size: 3vh;
     font-weight: 100;
     font-family: Roboto;
     color: #84E5FE;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 80px;
-    margin: 0px 0px 0px 80px;
-    letter-spacing: 6px;
+    font-size: 8vh;
+    margin: 0vh 0vh 0vh 8vh;
+    letter-spacing: 0.6vh;
 }
