--- a/style/skills.css
+++ b/style/skills.css
@@ -1,6 +1,8 @@
 @import 'colours.css';
 @import 'icon.css';
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,300');
+@import 'media_querySkills-page.css';
+
 
 * {
     margin: 0px;
@@ -14,18 +16,17 @@
 }
 
 .grid {
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     display: grid;
     /* background: pink; */
-    grid-template-columns: 0.85fr 0.15fr;
     grid-template-rows: 0.2fr 0.67fr 0.13fr;
 }
 
 
 .menu-box {
     grid-column: 2 / 3;
-    grid-row: 1/ 2;
+    /* grid-row: 1/ 2; */
     /* background: green; */
     display: flex;
     justify-content: flex-end;
@@ -41,13 +42,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 5vh;
+    
     margin : 2vh 2vh;;
     font-size: 5vh;
-    /* background: white; */
-    border-radius: 70%;
+    /* background: white; */ 
     padding: 1.6vh 1.6vh; 
-    filter: blur(0.1vh);
+    filter: blur(0.01vh);
     
     
     
@@ -57,7 +57,7 @@
     display: none;
     position: absolute;
     margin: 0vh 1vh;
-    min-width: 20%;
+    min-width: 20vh;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); 
     z-index: 1;
 }
@@ -89,8 +89,9 @@
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
-    padding: 2vh 1vh;
+    padding: 2% 1%;
     margin-top: 5%;
+    margin: 1vh 1vh;
     
 }
 
@@ -98,12 +99,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 1vh 1vh;
+    padding: 1% 1%;
 }
 
 
 .blur-logo-box { 
-    
     grid-column: 1 / 2;
     grid-row: 2 / 3;
     /* background: green;  */
@@ -126,9 +126,9 @@
     align-items: flex-start;
     font-size: 7vh;
     font-family: roboto;
-    padding: 2vh;
+    padding: 2%;
     flex-wrap: wrap;
-    letter-spacing: 0.2vh;
+    letter-spacing: 0.2%;
 }
 
 .logo-logo {
@@ -144,7 +144,7 @@
 .logo-word {
     font-size: 18vh;
     filter: blur(3px);
-    margin: 0vh 0vh 0vh 10vh;
+    margin: 0% 0% 0% 10%;
     color: transparent;
     -webkit-text-stroke: black 1px;
     font-family: noto serif;
@@ -167,9 +167,9 @@
     align-items: flex-start;
     font-size: 7vh;
     font-family: roboto;
-    padding: 2vh;
+    padding: 2%;
     flex-wrap: wrap;
-    letter-spacing: 0.2vh;
+    letter-spacing: 0.2%;
 }
 
 
@@ -185,8 +185,8 @@
 
 .skillnav-box {
     position: absolute;
-    width: 32.2vh;
-    height: 8.3vh;
+    width: 19%;
+    height: 8.3%;
     /* margin: 0px 30px; */
     background: rgba(16, 23, 42, 0.43);
     font-size: 3vh;
@@ -197,6 +197,6 @@
     justify-content: center;
     align-items: center;
     font-size: 8vh;
-    margin: 0vh 0vh 0vh 8vh;
-    letter-spacing: 0.6vh;
+    margin: 0% 0% 0% 8%;
+    letter-spacing: 0.8vh;
 }
